# DSSD-Grupo2-2023-Servicio

./: .gitignore  CSS_Validation.md  HTML_Validation.md  README.md  app.py  dockerfile  pyproject.toml
public/css/: alert.css  card.css  form.css  license.css  list.css  pdf_list.css  pdf_receipt.css  style.css
public/images/: .gitignore
src/api/: api_bp.py  associates_api_bp.py  club_api_bp.py  root_api_bp.py
src/api/auth/: auth_api_bp.py  auth_bp.py  jwt.py
src/api/blueprints/: associates_api_bp.py  auth_api_bp.py  category_api_bp.py  club_api_bp.py  collection_api_bp.py  fabrication_slot_api_bp.py  furniture_api_bp.py  material_api_bp.py  material_requests_api_bp.py  material_supplier_api_bp.py  root_api_bp.py  slot_api_bp.py  tick_api_bp.py  user_api_bp.py
src/api/helpers/: __init__.py  jwt_helpers.py
src/api/requests/: __init__.py
src/api/responses/: __init__.py  error_response.py  ok_response.py
src/core/: database.py
src/core/auth/: permission.py  role.py  user.py
src/core/business/: account_manager.py  associate_manager.py  business_manager.py  category_manager.py  collection_manager.py  config_manager.py  crud_manager.py  cuote_manager.py  fabrication_slot_manager.py  furniture_manager.py  material_manager.py  material_request_manager.py  material_reserve_manager.py  material_supplier_manager.py  producer_manager.py  service_manager.py  slot_manager.py  supplier_manager.py  user_manager.py
src/core/database/: database.py
src/service/: __init__.py  config.py
src/service/helpers/: controller_helpers.py  handlers  view_helpers.py
src/web/: __init__.py  config.py
src/web/blueprints/: associates_bp.py  auth_bp.py  disciplines_bp.py  graphics_bp.py  (+4 more)
static/: swagger.yaml
tests/: __init__.py  conftest.py  test_api.py  test_auth_api.py  test_fabrication_slot_api.py  test_material_api.py  test_material_supplier_api.py
(+79 files in other folders)
