[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Matías Manzin <matias.manzin@outlook.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask-SQLAlchemy = "^3.1.1"
Flask = "^2.3.3"
black = "^23.9.1"
psycopg2-binary = "^2.9.7"
PyJWT = "^2.8.0"
Flask-Cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
