[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Matías Manzin <matias.manzin@outlook.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask-SQLAlchemy = "^3.1.1"
Flask = "^2.3.3"
black = "^23.9.1"
psycopg2-binary = "^2.9.7"
PyJWT = "^2.8.0"
Flask-Cors = "^4.0.0"
passlib = "^1.7.4"
flask-swagger-ui = "^4.11.1"
pytest = "^7.4.3"
plotly = "^5.18.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
